--- a/.sort-derives.toml
+++ b/.sort-derives.toml
@@ -1,7 +1,6 @@
 # Define the custom order of derive attributes, separated by commas (e.g. "Debug, Clone, Copy")
 # The command line option `--order` will override this setting if specified.
 # type: string
-#order = "Copy, Clone, Eq, PartialEq, Ord, PartialOrd, Hash, Debug, Display, Default, Args, CandidType, Comparable, Decode, Deserialize, Encode, Enumeration, EnumIter, Error, Hash, Message, Oneof, Parser, ProposalMetadata, Serialize, ValidateEq, Zeroize, ZeroizeOnDrop" 
 order = "Copy, Clone, Eq, PartialEq, Ord, PartialOrd, Hash, Debug, Display, Default"
 
 # Preserve the original order for unspecified derive attributes (only applies when custom order is used)
@@ -15,4 +14,5 @@ preserve = false
 exclude = [
   "*.pb.*.rs",
   "rs/protobuf/src/gen",
+  "packages/*",
 ]
