--- a/Cargo.toml
+++ b/Cargo.toml
@@ -541,6 +541,7 @@ ic-certification = "2.6.0"
 ic-http-certification = "2.6.0"
 ic-response-verification = "2.6.0"
 ic-stable-structures = "0.6.5"
+ic-transport-types = { version = "0.37.1" }
 ic-utils = { version = "0.37.0", features = ["raw"] }
 ic_bls12_381 = { version = "=0.10.0", default-features = false, features = [
     "groups",
