--- a/packages/pocket-ic/BUILD.bazel
+++ b/packages/pocket-ic/BUILD.bazel
@@ -10,6 +10,7 @@ DEPENDENCIES = [
     "@crate_index//:hex",
     "@crate_index//:ic-agent",
     "@crate_index//:ic-cdk",
+    "@crate_index//:ic-transport-types",
     "@crate_index//:reqwest",
     "@crate_index//:schemars",
     "@crate_index//:serde",
