--- a/rs/rosetta-api/icrc1/ledger/BUILD.bazel
+++ b/rs/rosetta-api/icrc1/ledger/BUILD.bazel
@@ -305,6 +305,7 @@ rust_test(
             "@crate_index//:candid",
             "@crate_index//:ciborium",
             "@crate_index//:ic-cdk",
+            "@crate_index//:ic-cdk-timers",
             "@crate_index//:ic-metrics-encoder",
             "@crate_index//:ic-stable-structures",
             "@crate_index//:num-traits",
