--- a/rs/bitcoin/kyt/BUILD.bazel
+++ b/rs/bitcoin/kyt/BUILD.bazel
@@ -10,9 +10,14 @@ rust_library(
         ["src/**"],
         exclude = ["src/main.rs"],
     ),
+    compile_data = [
+        "templates/dashboard.html",
+    ],
     crate_name = "ic_btc_kyt",
     deps = [
         # Keep sorted.
+        "//rs/rust_canisters/http_types",
+        "@crate_index//:askama",
         "@crate_index//:bitcoin_0_32",
         "@crate_index//:candid",
         "@crate_index//:ciborium",
@@ -21,6 +26,7 @@ rust_library(
         "@crate_index//:ic-cdk",
         "@crate_index//:ic-stable-structures",
         "@crate_index//:serde",
+        "@crate_index//:time",
     ],
 )
 
@@ -32,6 +38,7 @@ rust_test(
         "@crate_index//:bitcoin_0_32",
         "@crate_index//:candid_parser",
         "@crate_index//:ic-btc-interface",
+        "@crate_index//:scraper",
         "@crate_index//:tokio",
     ],
 )
@@ -60,6 +67,8 @@ rust_canister(
     deps = [
         # Keep sorted.
         ":btc_kyt_lib",
+        "//rs/rust_canisters/http_types",
+        "@crate_index//:askama",
         "@crate_index//:bitcoin_0_32",
         "@crate_index//:candid",
         "@crate_index//:candid_parser",
