--- a/rs/bitcoin/kyt/Cargo.toml
+++ b/rs/bitcoin/kyt/Cargo.toml
@@ -11,14 +11,17 @@ name = "ic-btc-kyt-canister"
 path = "src/main.rs"
 
 [dependencies]
+askama = { workspace = true }
 bitcoin = { version = "0.32.2", default-features = false }
 candid = { workspace = true }
 ciborium = { workspace = true }
 futures = { workspace = true }
 ic-btc-interface = { workspace = true }
+ic-canisters-http-types = { path = "../../rust_canisters/http_types" }
 ic-cdk = { workspace = true }
 ic-stable-structures = { workspace = true }
 serde = { workspace = true }
+time = { workspace = true }
 
 [dev-dependencies]
 candid_parser = { workspace = true }
@@ -28,3 +31,4 @@ ic-test-utilities-load-wasm = { path = "../../test_utilities/load_wasm" }
 ic-universal-canister = { path = "../../universal_canister/lib" }
 pocket-ic = { path = "../../../packages/pocket-ic" } 
 tokio = { workspace = true }
+scraper = "0.17.1"
