feat(IDX): allow tests to depend on mainnet pocket-ic
This adds a build setting & related transition that allows for the
pocket-ic version of tests to be overriden. By default
`//:pocket-ic-server` points to the pocket-ic server from the source
tree. This can be overriden by using `pocket_ic_mainnet_test` or by
using the `//:pocket-ic-mainnet` target.

--- a/rs/bitcoin/ckbtc/kyt/BUILD.bazel
+++ b/rs/bitcoin/ckbtc/kyt/BUILD.bazel
@@ -1,6 +1,7 @@
 load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
 load("//bazel:canisters.bzl", "rust_canister")
 load("//bazel:defs.bzl", "rust_ic_test")
+load("//bazel:pocket-ic-tests.bzl", "pocket_ic_mainnet_test")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -71,4 +72,9 @@ rust_ic_test(
         "@crate_index//:assert_matches",
         "@crate_index//:candid",
     ],
+)
+
+pocket_ic_mainnet_test(
+    name = "kyt_integration_test_mainnet",
+    test = ":kyt_integration_test",
 )
