--- a/rs/bitcoin/kyt/BUILD.bazel
+++ b/rs/bitcoin/kyt/BUILD.bazel
@@ -74,13 +74,13 @@ rust_ic_test(
     env = {
         "CARGO_MANIFEST_DIR": "rs/bitcoin/kyt",
         "IC_BTC_KYT_CANISTER_WASM_PATH": "$(rootpath :btc_kyt_canister)",
-        "POCKET_IC_BIN": "$(rootpath //rs/pocket_ic_server:pocket-ic-server)",
+        "POCKET_IC_BIN": "$(rootpath //:pocket-ic-server)",
     },
     deps = [
         # Keep sorted.
         ":btc_kyt_lib",
+        "//:pocket-ic-server",
         "//packages/pocket-ic",
-        "//rs/pocket_ic_server:pocket-ic-server",
         "//rs/test_utilities/load_wasm",
         "//rs/types/base_types",
         "//rs/types/types",
