--- a/.github/workflows-source/ci-main.yml
+++ b/.github/workflows-source/ci-main.yml
@@ -9,6 +9,8 @@ on:
       - master
       - 'dev-gh-*'
   pull_request:
+    branches-ignore:
+      - hotfix-* # CI main is automatically triggered by the release workflow, so no need to run it twice
   # Used as reusable workflow within release-testing workflow
   workflow_call:
 
