--- a/.github/workflows-source/ci-main.yml
+++ b/.github/workflows-source/ci-main.yml
@@ -22,12 +22,12 @@ permissions: read-all
 env:
   CI_COMMIT_SHA: ${{ github.sha }}
   CI_JOB_NAME: ${{ github.job }}
+  CI_JOB_ID: ${{ github.run_id }}
   CI_JOB_URL: "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
   CI_PIPELINE_SOURCE: ${{ github.event_name }}
   CI_PROJECT_DIR: ${{ github.workspace }}
   CI_PULL_REQUEST_TARGET_BRANCH_NAME: ${{ github.event.pull_request.base.ref }}
   BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
-  ROOT_PIPELINE_ID: ${{ github.run_id }}
   RUSTFLAGS: "--remap-path-prefix=${CI_PROJECT_DIR}=/ic"
   BUILDEVENT_DATASET: "github-ci-dfinity"
 
@@ -175,7 +175,7 @@ jobs:
           BAZEL_CI_CONFIG: "--config=ci --config macos_ci"
           BAZEL_COMMAND: test
           BAZEL_EXTRA_ARGS: '--test_tag_filters=test_macos'
-          BAZEL_STARTUP_ARGS: "--output_base /var/tmp/bazel-output/${ROOT_PIPELINE_ID}"
+          BAZEL_STARTUP_ARGS: "--output_base /var/tmp/bazel-output/${CI_JOB_ID}"
           BAZEL_TARGETS: "//rs/... //publish/binaries/..."
           HONEYCOMB_API_TOKEN: ${{ secrets.HONEYCOMB_API_TOKEN }}
       - <<: *bazel-bep
@@ -250,12 +250,12 @@ jobs:
         run: |
           set -eExuo pipefail
           REPO_NAME="${GITHUB_REPOSITORY##*/}"
-          rm -rf "/cache/job/${CI_JOB_NAME}/${ROOT_PIPELINE_ID}"
-          mkdir -p "/cache/job/${CI_JOB_NAME}/${ROOT_PIPELINE_ID}/artifacts"
-          ln -s "/cache/job/${CI_JOB_NAME}/${ROOT_PIPELINE_ID}/artifacts" /__w/$REPO_NAME/$REPO_NAME/artifacts
-          buildevents cmd "$ROOT_PIPELINE_ID" "$CI_JOB_NAME" build-command -- \
+          rm -rf "/cache/job/${CI_JOB_NAME}/${CI_JOB_ID}"
+          mkdir -p "/cache/job/${CI_JOB_NAME}/${CI_JOB_ID}/artifacts"
+          ln -s "/cache/job/${CI_JOB_NAME}/${CI_JOB_ID}/artifacts" /__w/$REPO_NAME/$REPO_NAME/artifacts
+          buildevents cmd "$CI_JOB_ID" "$CI_JOB_NAME" build-command -- \
               "$CI_PROJECT_DIR"/ci/scripts/run-build-ic.sh
-          rm -rf "/cache/job/${CI_JOB_NAME}/${ROOT_PIPELINE_ID}"
+          rm -rf "/cache/job/${CI_JOB_NAME}/${CI_JOB_ID}"
         env:
           BAZEL_COMMAND: "build"
           RUN_ON_DIFF_ONLY: ${{ !contains(github.event.pull_request.labels.*.name, 'CI_ALL_BAZEL_TARGETS') }}
@@ -345,7 +345,7 @@ jobs:
         shell: bash
         run: |
           set -eExuo pipefail
-          buildevents cmd "$ROOT_PIPELINE_ID" "$CI_JOB_NAME" build-command -- \
+          buildevents cmd "$CI_JOB_ID" "$CI_JOB_NAME" build-command -- \
               "$CI_PROJECT_DIR"/ci/scripts/rust-lint.sh
 
   cargo-build-release-linux:
@@ -374,5 +374,5 @@ jobs:
         shell: bash
         run: |
           set -eExuo pipefail
-          buildevents cmd "$ROOT_PIPELINE_ID" "$CI_JOB_NAME" build-command -- \
+          buildevents cmd "$CI_JOB_ID" "$CI_JOB_NAME" build-command -- \
               cargo build --release
