--- a/rs/ethereum/types/BUILD.bazel
+++ b/rs/ethereum/types/BUILD.bazel
@@ -4,7 +4,7 @@ package(default_visibility = ["//visibility:public"])
 
 DEPENDENCIES = [
     # Keep sorted.
-    "//packages/ic-sha3",
+    "@crate_index//:ic-sha3",
     "@crate_index//:hex",
     "@crate_index//:minicbor",
     "@crate_index//:serde",
