--- a/packages/ic-ethereum-types/Cargo.toml
+++ b/packages/ic-ethereum-types/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
 name = "ic-ethereum-types"
-description = "Ethereum common types that are used across multiple crates"
-version.workspace = true
+version = "1.0.0"
+description = "Ethereum common types that by canisters on the Internet Computer"
+license = "Apache-2.0"
+readme = "README.md"
+include = ["src", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]
+repository = "https://github.com/dfinity/ic"
 authors.workspace = true
 edition.workspace = true
-documentation.workspace = true
+documentation = "https://docs.rs/ic-ethereum-types"
 
 [dependencies]
 hex = { workspace = true }
