feat(IDX): use json for mainnet-canisters
This replaces `mainnet-canisters.bzl` with a json equivalent
`mainnet-canisters.json`. This simplifies the update logic and separates
the bazel logic from the mainnet data, also allowing mainnet data to be
used more broadly if necessary. In the future this will allow us to
replace the update logic with `jq` and `ic-wasm` directly.

A new repository rule is added which reads the JSON data and downloads
the canisters as repositories.

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -20,7 +20,7 @@
 /bazel/fuzz_testing.bzl   @dfinity/idx @dfinity/product-security
 /third_party/             @dfinity/idx
 /WORKSPACE.bazel          @dfinity/idx
-/mainnet-canisters.bzl    @dfinity/idx @dfinity/nns-team
+/mainnet-canisters.json   @dfinity/idx @dfinity/nns-team
 /BUILD.bazel              @dfinity/idx
 .bazelrc                  @dfinity/idx
 .bazelversion             @dfinity/idx
