--- a/rs/nervous_system/tools/sync-with-released-nevous-system-wasms/BUILD.bazel
+++ b/rs/nervous_system/tools/sync-with-released-nevous-system-wasms/BUILD.bazel
@@ -19,6 +19,7 @@ DEPENDENCIES = [
     "@crate_index//:ic-wasm__ic-wasm",
     "@crate_index//:rgb",
     "@crate_index//:serde",
+    "@crate_index//:serde_json",
     "@crate_index//:tempfile",
     "@crate_index//:tokio",
 ]
@@ -28,10 +29,10 @@ rust_binary(
     srcs = [
         "src/main.rs",
     ],
-    args = ["$(location //:mainnet-canisters.bzl) $(location @crate_index//:ic-wasm__ic-wasm)"],
+    args = ["$(location //:mainnet-canisters.json) $(location @crate_index//:ic-wasm__ic-wasm)"],
     data = [
         ":tools",
-        "//:mainnet-canisters.bzl",
+        "//:mainnet-canisters.json",
     ],
     deps = DEPENDENCIES,
 )
