--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -13,7 +13,7 @@ exports_files([
     "clippy.toml",
     "rustfmt.toml",
     "WORKSPACE.bazel",
-    "mainnet-canisters.bzl",
+    "mainnet-canisters.json",
 ])
 
 # bazel/workspace_status.sh will write the current timestamp to this file on every run to provade an input that always changes for some targets.
