--- a/Cargo.toml
+++ b/Cargo.toml
@@ -466,7 +466,7 @@ async-recursion = "1.0.5"
 async-scoped = { version = "0.8", features = ["use-tokio"] }
 async-stream = "0.3.5"
 async-trait = "0.1.81"
-axum = "0.7.5"
+axum = "0.7.7"
 backoff = "0.4"
 base64 = { version = "0.13.1" }
 bincode = "1.3.3"
@@ -516,7 +516,7 @@ http-body = "1.0.1"
 http-body-util = "0.1.2"
 humantime-serde = "1.1.1"
 hyper = { version = "1.4.1", features = ["full"] }
-hyper-rustls = { version = "0.27.2", default-features = false, features = [
+hyper-rustls = { version = "0.27.3", default-features = false, features = [
     "http1",
     "http2",
     "native-tokio",
@@ -524,7 +524,7 @@ hyper-rustls = { version = "0.27.2", default-features = false, features = [
     "tls12",
 ] }
 hyper-socks2 = { version = "0.9.1", default-features = false }
-hyper-util = { version = "0.1.7", features = ["full"] }
+hyper-util = { version = "0.1.9", features = ["full"] }
 ic-agent = { version = "0.37.1", features = [
     "experimental_sync_call",
     "hyper",
@@ -602,8 +602,8 @@ prometheus = { version = "0.13.4", features = ["process"] }
 prometheus-parse = { version = "0.2.4" }
 proptest = "1.5.0"
 proptest-derive = "0.5.0"
-prost = "^0.13"
-prost-build = "^0.13"
+prost = "0.13.3"
+prost-build = "0.13.3"
 protobuf = "2.28.0"
 quinn = { version = "0.11.5", default-features = false, features = [
     "ring",
@@ -616,7 +616,7 @@ rand = { version = "0.8.5", features = ["small_rng"] }
 rand_chacha = "0.3.1"
 rayon = "1.10.0"
 rcgen = { version = "0.13.1", features = ["zeroize"] }
-regex = "1.10.6"
+regex = "1.11.0"
 reqwest = { version = "0.12.7", default-features = false, features = [
     "blocking",
     "http2",
@@ -630,7 +630,7 @@ reqwest = { version = "0.12.7", default-features = false, features = [
 rolling-file = "0.2.0"
 rstest = "0.19.0"
 rustc-demangle = { version = "0.1.16" }
-rustls = { version = "0.23.12", default-features = false, features = [
+rustls = { version = "0.23.13", default-features = false, features = [
     "ring",
     "std",
     "brotli",
@@ -670,8 +670,8 @@ tokio-rustls = { version = "0.26.0", default-features = false, features = [
     "ring",
 ] }
 tokio-util = { version = "0.7.12", features = ["full"] }
-tonic = "0.12.0"
-tonic-build = "0.12.0"
+tonic = "0.12.3"
+tonic-build = "0.12.3"
 tower = { version = "0.4.13", features = ["full"] }
 tower-http = { version = "0.5.2", features = [
     "cors",
