--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -305,6 +305,7 @@ jobs:
         env:
           CI_COMMIT_REF_PROTECTED: ${{ github.ref_protected }}
           CI_DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
+          REPO_NAME: ${{ github.repository }}
   build-ic:
     name: Build IC
     runs-on:
