--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -347,7 +347,7 @@ jobs:
         env:
           BAZEL_COMMAND: "build"
           RUN_ON_DIFF_ONLY: ${{ !contains(github.event.pull_request.labels.*.name, 'CI_ALL_BAZEL_TARGETS') }}
-          MERGE_BASE_SHA: ${{ github.event.pull_request.head.sha }}
+          TARGET_BRANCH_SHA: ${{ github.event.pull_request.head.sha }}
           DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
       - name: Upload build-ic.tar
         uses: actions/upload-artifact@v4
