--- a/.github/workflows-source/release-testing.yml
+++ b/.github/workflows-source/release-testing.yml
@@ -62,7 +62,7 @@ anchors:
     # we avoid collecting artifacts of jobs that were cancelled
     if: success() || failure()
     uses: actions/upload-artifact@v4
-    with:
+    with: &bazel-bep-with
       name: ${{ github.job }}-bep
       retention-days: 14
       if-no-files-found: ignore
@@ -200,7 +200,8 @@ jobs:
           BAZEL_CI_CONFIG: "--config=systest --repository_cache=/cache/bazel"
           BAZEL_EXTRA_ARGS_RULES: "--test_timeout=7200 --test_env=OLD_VERSION=${{ matrix.version }}"
           HONEYCOMB_API_TOKEN: ${{ secrets.HONEYCOMB_API_TOKEN }}
-      - name: Upload bazel bep for version ${{ matrix.version }}
+      - <<: *bazel-bep
+        name: Upload bazel bep for version ${{ matrix.version }}
         with:
+          <<: *bazel-bep-with
           name: ${{ github.job }}-${{ matrix.version }}-bep
-        <<: *bazel-bep
