--- a/rs/ethereum/cketh/minter/BUILD.bazel
+++ b/rs/ethereum/cketh/minter/BUILD.bazel
@@ -41,11 +41,11 @@ rust_library(
     version = "0.1.0",
     deps = [
         # Keep sorted.
+        "//packages/ic-ethereum-types",
         "//packages/icrc-ledger-client-cdk:icrc_ledger_client_cdk",
         "//packages/icrc-ledger-types:icrc_ledger_types",
         "//rs/crypto/secp256k1",
         "//rs/ethereum/evm-rpc-client",
-        "//rs/ethereum/types",
         "//rs/phantom_newtype",
         "//rs/types/management_canister_types",
         "//rs/utils/ensure",
@@ -144,10 +144,10 @@ rust_test(
     deps = [
         # Keep sorted.
         ":minter",
+        "//packages/ic-ethereum-types",
         "//packages/icrc-ledger-client-cdk:icrc_ledger_client_cdk",
         "//packages/icrc-ledger-types:icrc_ledger_types",
         "//rs/crypto/secp256k1",
-        "//rs/ethereum/types",
         "//rs/rust_canisters/http_types",
         "@crate_index//:askama",
         "@crate_index//:candid",
@@ -202,10 +202,10 @@ rust_binary(
         deps = [
             # Keep sorted.
             ":minter",
+            "//packages/ic-ethereum-types",
             "//packages/icrc-ledger-types:icrc_ledger_types",
             "//rs/ethereum/cketh/test_utils",
             "//rs/ethereum/ledger-suite-orchestrator/test_utils",
-            "//rs/ethereum/types",
             "//rs/state_machine_tests",
             "//rs/types/base_types",
             "@crate_index//:assert_matches",
